# SDS-RAG

./: .env.example  .gitignore  README.md  app.py  example_chatbot_usage.py  health_check.py  pyproject.toml  requirements.txt  test_pages.py  test_pdf_extraction.py
data/processed/: .gitkeep
data/uploads/: .gitkeep
docker/: docker-compose.yml
docs/: API_README.md  STANDARDIZED_RESPONSE_FORMAT.md  STREAMLIT_README.md  UTILS_USAGE_EXAMPLES.md  project_structure.md  setup_services.md
examples/: rag_usage.py
scripts/: health_check.py  run_app.py  setup_services.bat  simple_health_check.py  start_app.bat  start_app.sh
src/: api_server.py  app.py  app_old.py
src/components/: __init__.py  document_viewer.py  file_upload.py  sidebar.py
src/config/: settings.py
src/core/: document_processor.py
src/models/: __init__.py  schemas.py
src/pages/: chat.py  search.py  upload.py
src/sds_rag/: __init__.py
src/sds_rag/api/: __init__.py  main.py
src/sds_rag/config/: __init__.py  config.py  constants.py  settings.py
src/sds_rag/core/: document_processor.py
src/sds_rag/models/: __init__.py  api_models.py  exceptions.py  response.py
src/sds_rag/services/: chat_service.py  (+8 more)
src/services/: chat_service.py  classification_service.py  embedding_service.py  extraction_service.py  parsing_service.py  rag_service.py  validation_service.py  vector_storage_service.py
src/utils/: document_processor.py  document_processor_old.py  embeddings.py  financial_parser.py  llm.py  rag_chain.py  table_classifier.py  table_extractor.py  vector_store.py
tests/: __init__.py  conftest.py  test_embeddings.py  test_vector_store.py
tests/api/: test_endpoints.py
(+13 files in other folders)
